tests/neg/i17335.scala
//> using options -Werror -Wunused:all

def aMethod() =
  doStuff { (x) => x } // error
